namespace CabinetInfirmier;

public class Adresse
{
    private uint etage;
    private uint numero;
    private String rue;
    private uint codePostal;
    private String ville;
}